--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --branco: #CCD6F6;
     --cinza: #8892B0;
     --preto: #000000;
+    --rosa: #F72585;
 }
 
 html,
@@ -17,8 +18,9 @@ body,
 
 
 body{
-    background: linear-gradient(50deg, #CCD6F6, #8892B0) no-repeat;
+    background: linear-gradient(50deg, #112240, #0A192F) no-repeat;
     font-family: monospace;
+    word-spacing: -2px;
 }
 
 /*Barra de navegação*/
@@ -30,6 +32,7 @@ nav a img{
 nav a span{
     font-size: 1.5em;
     color: var(--branco);
+    word-spacing: -10px;
 }
 
 nav.navbar-transparente {
@@ -55,4 +58,119 @@ nav.navbar-transparente {
     width: 1px;
     background: var(--branco);
     margin: 12px 15px;
+}
+
+/*Main*/
+
+main{
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.txt1{
+    text-transform: uppercase;
+    font-size: 5em;
+    color: var(--branco);
+    word-spacing: -7px;
+}
+
+.txt2{
+    text-transform: uppercase;
+    font-size: 5em;
+    font-weight: bolder;
+    background-image: linear-gradient(50deg,#112240, #61f8d7, #112240);
+    background-clip: text;
+    -webkit-background-clip: text; /* Suporte para navegadores WebKit, como o Safari e o Chrome */
+    color: transparent;
+}
+
+main p {
+    color: var(--branco);
+}
+
+.btn-custom{
+    background: #61f8d727;
+    color: var(--verde);
+    border: 1px solid var(--verde);
+    box-shadow: 0px 0px 7px var(--verde);
+    margin: 10px;
+}
+
+.btn-custom:hover{
+    background: var(--verde);
+    color: var(--azul-claro);
+    transition: .7s;
+    box-shadow: 0px 0px 20px var(--verde);
+}
+
+/*Sessao*/
+
+.sessao{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+/*Sobre mim*/
+
+#sobre-mim {
+    background: var(--branco);
+    color: var(--azul);
+}
+
+.txt-sobre-mim{
+    text-transform: uppercase;
+    font-size: 3em;
+    word-spacing: -7px;
+    padding-top: 15px;
+    padding-bottom: 50px;
+}
+
+.img-sobre-mim{
+    background: var(--azul-claro);
+    border-radius: 100%;
+    width: 450px;
+}
+
+p > a{
+    color: var(--rosa);
+    font-size: 1.1em;
+}
+ul.list-inline li {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: .9em;
+  }
+  
+/*Atualmente*/
+
+
+#atualmente {
+    color: var(--branco);
+}
+
+.txt-atualemte{
+    text-transform: uppercase;
+    font-size: 3em;
+    word-spacing: -7px;
+    padding-top: 15px;
+    padding-bottom: 50px;
+}
+
+.img-atualmente{
+    width: 450px;
+}
+
+
+/*Projetos*/
+
+.projetos{
+    height: 450px;
+    background: var(--azul);
+    color: var(--branco);
+    margin-bottom: 20px;
+}
+
+.projetos:hover{
+    transform: scale(1.07);
+    transition: .5s;
 }
