--- a/style.css
+++ b/style.css
@@ -193,6 +193,12 @@ ul.list-inline li {
 }
 
 
+/*Footer*/
+
+footer{
+    color: var(--branco);
+    margin: 20px;
+}
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) {
