--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ main {
     color: transparent;
 }
 
+.invisivel {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0s ease, visibility 0s linear 0.5s;
+}
+
+
 main p {
     color: var(--branco);
 }
