--- a/style.css
+++ b/style.css
@@ -87,9 +87,8 @@ main {
 }
 
 .invisivel {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0s ease, visibility 0s linear 0.5s;
+    color: transparent;
+    background: transparent;
 }
 
 
